[package]
name = "pt-sign-in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
job_scheduler = "*"
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
clap = { version = "4.0.9", features = ["derive"] }
